Closed Bug 1581511 Opened 6 years ago Closed 6 years ago

Runtime exception on move constructor of ScopeExit

Categories

(Core :: MFBT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: xeonchen, Assigned: xeonchen)

Details

Attachments

(1 file)

auto guardA = MakeScopeExit([&] {});
auto guardB = std::move(guardA);

will cause runtime exception because the move constructor is not correctly guarded.

add MOZ_GUARD_OBJECT_NOTIFIER_{PARAM,INIT} to move constructor.

Attachment #9092997 - Attachment description: Bug 1581511 - fix move constructor of ScopeExit; r=jwalden → Bug 1581511 - fix move constructor of ScopeExit;
Pushed by xeonchen@gmail.com: https://hg.mozilla.org/integration/autoland/rev/a9b3127b31bd fix move constructor of ScopeExit; r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: